--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;600;700;800&family=Poppins:wght@200;300;400;500;600&display=swap');
+*{
+  box-sizing: none;
+  font-family: poppins;
+}
+
 .App {
   text-align: center;
 }
