--- a/src/Components/Cards.css
+++ b/src/Components/Cards.css
@@ -10,4 +10,12 @@
     align-self: center;
     text-align: left;
     width: 43%;
+    margin-left: auto;
+  margin-right: auto;
+}
+
+@media only screen and (max-width: 680px) {
+    .cards{
+        font-size: 0.8em;
+    }
 }
