--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -18,4 +18,14 @@
     justify-content: space-between;
     list-style: none;
     padding-top: 30px;
+    flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 680px) {
+    .footer-list {
+        flex-direction: column;
+    }
+    .footer-top{
+        flex-direction: column;
+    }
 }
