--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
   max-height: 70px;
   align-items: center;
-  
+
 }
 
 .nav-logo {
@@ -61,4 +61,43 @@ button:hover{
 a {
     color: inherit; /* blue colors for links too */
     text-decoration: inherit; /* no underline */
+  }
+
+  .nav-right{
+    display: flex;
+    flex-direction: row;
+    padding: 0px 0px 15px 120px;
+    justify-content: space-between;
+    max-height: 70px;
+    align-items: center;
+  }
+
+
+  .nav-btn{
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  @media only screen and (max-width: 1080px){
+    .nav-btn{
+      visibility: visible;
+      opacity: 1;
+    }
+    .nav-right{
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1.5rem;
+      transition: 1s;
+      transform: translateY(-100vh);
+    }
+    /* .responsive-nav{
+      transform: none;
+    } */
   }
